<resources>
    <string name="app_name">appWithWebView</string>
    <string name="logo">logo</string>
    <string name="titulotextapp">Calculadora para sistema Fotovoltaicos seguindo a norma NDU 013</string>
    <string name="dados_do_cliente">Dados do cliente</string>
    <string name="irradia_o_do_local">Sombreamento</string>
    <string name="ndu_015">NDU 015</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="voltar">Voltar</string>
    <string name="seguir">Seguir</string>
    <string name="calcular">Calcular</string>
    <string name="cadastrar">cadastrar</string>
    <string name="todo">TODO</string>
    <string name="testosolarimetro">Caso exista alguma fonte de sombra próximo aos módulos. Deve-se calcular o sombreamento com um solarímetro na região aonde se pretende instalar o sistema fotovoltaico.</string>
    <string name="btfinanciamento">Financiamento</string>
    <string name="txlistademateriais">Lista de materiais</string>
    <string name="txproducaopv">Produção do PV</string>
    <string name="txmudarvalorfinaciamento">Mudar o valor da entrada</string>
    <string name="webviewparacadastrodefinanciamento">Webviewparacadastrodefinanciamento</string>
    <string name="btparadescricaoestrutura">Descrição das estruturas</string>
</resources>
